[package]
name = "learning_lm_rs"
version = "0.1.0"
edition = "2021"


[dependencies]

axum = "0.8.0"
axum-server = "0.7.0"
once_cell = "1.19.0"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.44.0", features = ["full"] }
num-traits = "0.2.19"
half = { version = "2.4.1", features = ["num-traits"] }
askama = { version = "0.12.1", features = ["serde-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = { version = "0.19.1", features = ["unstable_wasm"] }
rand = "0.8.0"
